--- a/config/.env
+++ b/config/.env
@@ -2,3 +2,5 @@ APPLE_ID="ios-si@wolox.com.ar"
 # Wolox team defaults
 TEAM_ID="7XS5GQGS29"
 ITC_TEAM_ID="95757806"
+GIT_URL="git@github.com:Wolox/apple-certificates.git"
+GIT_BRANCH="wolox-team"
