Adding app partial name key

--- a/fastlane/config/.env
+++ b/fastlane/config/.env
@@ -5,3 +5,4 @@ GIT_URL="git@github.com:Wolox/apple-certificates.git"
 TEAM_ID="7XS5GQGS29"
 ITC_TEAM_ID="95757806"
 GIT_BRANCH="wolox-team"
+TEAM_NAME="Wolox"
