--- a/fastlane/config/.env
+++ b/fastlane/config/.env
@@ -1,8 +1,4 @@
 APPLE_ID="ios-si@wolox.com.ar"
 GIT_URL="git@github.com:Wolox/apple-certificates.git"
 
-# Wolox team defaults
-TEAM_ID="7XS5GQGS29"
-ITC_TEAM_ID="95757806"
-GIT_BRANCH="wolox-team"
-TEAM_NAME="Wolox"
+APP_NAME=""
