--- a/android/Gemfile
+++ b/android/Gemfile
@@ -2,3 +2,4 @@ source 'https://rubygems.org'
 
 gem 'fastlane'
 gem 'pry'   # For debugging ruby scripts. Comment if you don't need it.
+gem 'fastlane-plugin-firebase_app_distribution'
