--- a/ios/fastlane/config/qa.env
+++ b/ios/fastlane/config/qa.env
@@ -5,3 +5,12 @@ TEAM_ID="7XS5GQGS29"
 ITC_TEAM_ID="95757806"
 GIT_BRANCH="wolox-team"
 TEAM_NAME="Wolox"
+
+# Project config
+BUNDLE_ID=
+SCHEME=
+
+# Api key config, check readme for instructions on how to set it up with your account
+KEY_ID=
+ISSUER_ID=
+KEY_FILEPATH=
