--- a/ios/fastlane/config/stage.env
+++ b/ios/fastlane/config/stage.env
@@ -5,3 +5,12 @@ TEAM_ID=""
 ITC_TEAM_ID=""
 GIT_BRANCH=""
 TEAM_NAME=""
+
+# Project config
+BUNDLE_ID=
+SCHEME=
+
+# Api key config, check readme for instructions on how to set it up with your account
+KEY_ID=
+ISSUER_ID=
+KEY_FILEPATH=
